package mycalendar.modele.calendrier;

public class Message {
}
